[package]
name = "space-time"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = { version = "^0.1", default-features = false }
num-traits = { version = "^0.2", default-features = false, features = ["libm"] }
time = { version = "^0.2", default-features = false }

[dev-dependencies]
quickcheck = "^0.9"
quickcheck_macros = "^0.9"
