[package]
name = "space-time"
version = "0.1.2"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
description = "A nightly only library of space-time filling curves that supports no-std."
license-file = "LICENSE.txt"
repository = "https://github.com/boydjohnson/space_time"
keywords = ["spatial", "space-filling-curves", "spatio-temporal", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = { version = "^0.1", default-features = false }
num-traits = { version = "^0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
quickcheck = "^0.9"
quickcheck_macros = "^0.9"
